# cargo-quickinstall

./: .editorconfig  .gitignore  23-08-28  23-08-29  23-08-30  23-08-31  23-09-01  23-09-02  23-09-03  23-09-04  23-09-05  23-09-06  23-09-07  23-09-08  23-09-09  23-09-10  23-09-11  23-09-12  23-09-13  23-09-14  23-09-15  23-09-16  23-09-17  23-09-18  23-09-19  23-09-20  23-09-21  23-09-22  23-09-23  23-09-24  23-09-25  23-09-26  23-09-27  23-09-28  23-09-29  23-09-30  23-10-01  23-10-02  23-10-03  23-10-04  (+1009 more)
.github/: dependabot.yml
.github/actions/: cache-cargo-install.yml
.github/actions/cache-cargo-install/: action.yml
.github/actions/cronjob-setup/: action.yml
.github/workflows/: build-package.yml  build-package.yml.template  build-version.yml  cronjob-m1-catchup.yml  cronjob.yml  deploy-stats-server.yml  release-plz.yml  selfbuild.yml  test.yml  upgrade-transitive-deps.yml  weekly.yml
.github/workflows/actions/build-version/: action.yml
.github/workflows/actions/build-version/docker-setup/: action.yml
.github/workflows/actions/docker-setup/: action.yml
cargo-quickinstall/: CHANGELOG.md  Cargo.toml  build.rs
cargo-quickinstall/src/: args.rs  command_ext.rs  install_error.rs  json_value_ext.rs  lib.rs  main.rs  utils.rs
cargo-quickinstall/tests/: integration_tests.rs
cronjob-scripts/: pyproject.toml  requirements.txt
cronjob-scripts/cronjob_scripts/: checkout_worktree.py  crates_io_popular_crates.py  get_latest_version.py  stats.py  targets.py  trigger_package_build.py  types.py
cronjob-scripts/tests/: test_targets.py
cronjob_scripts/: README.md  architectures.py  checkout_worktree.py  crates_io_popular_crates.py  find-common-failures.py  get_latest_version.py  pyproject.toml  requirements.txt  stats.py  trigger-package-build.py  trigger_package_build.py  types.py
cronjob_scripts/tests/: test_architectures.py
scripts/: README.md  checkout_worktree.py  get_latest_version.py  hello.py  pyproject.toml  requirements.txt  stats.py  trigger-package-build.py
server/: Cargo.toml  Dockerfile  README.md  fly.toml
server/fly.io/: Cargo.toml  Dockerfile  README.md  fly.toml
server/fly.io/src/: main.rs
stats/: fetch.py  tidy.jsonl
stats-server/: Cargo.toml  Dockerfile  README.md  fly.toml
stats-server/src/: main.rs
stats/raw/: 2022-09-01.json  2022-09-02.json  2022-09-03.json  2022-09-04.json  2022-09-05.json  2022-09-06.json  2022-09-07.json  2022-09-08.json  2022-09-09.json  2022-09-10.json  2022-09-11.json  2022-09-12.json  2022-09-13.json  2022-09-14.json  2022-09-15.json  2022-09-16.json  2022-09-17.json  2022-09-18.json  2022-09-19.json  2022-09-20.json  2022-09-21.json  2022-09-22.json  2022-09-23.json  2022-09-24.json  2022-09-25.json  2022-09-26.json  2022-09-27.json  2022-09-28.json  2022-09-29.json  2022-09-30.json  2022-10-01.json  2022-10-02.json  2022-10-03.json  2022-10-04.json  2022-10-05.json  2022-10-06.json  2022-10-07.json  2022-10-08.json  2022-10-09.json  2022-10-10.json  (+80 more)
warehouse-clerk/: Cargo.toml  wrangler.toml
warehouse-clerk/src/: lib.rs
warehouse-clerk/worker/: worker.js
