[package]
name = "cargo-quickinstall"
version = "0.2.10"
authors = ["David Laban <david.laban@red-badger.com>"]
edition = "2018"
description = "Precompiled binary installs for `cargo install`"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/cargo-bins/cargo-quickinstall"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyjson = "2"
home = "0.5.9"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
tempfile = "3.11.0"
guess_host_triple = "0.1.3"

[dev-dependencies]
mktemp = "0.5.1"
