[package]
name = "cargo-quickinstall"
version = "0.3.3"
authors = ["David Laban <david.laban@red-badger.com>"]
edition = "2018"
description = "Precompiled binary installs for `cargo install`"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/cargo-bins/cargo-quickinstall"

[dependencies]
tinyjson = "2"
home = "0.5.9"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
tempfile = "3.14.0"
guess_host_triple = "0.1.4"

[build-dependencies]
embed-resource = "2.5.0"

[dev-dependencies]
mktemp = "0.5.1"
