[project]
name = "cronjob-scripts"
version = "0.0.0"
description = "Scripts for use in cargo-quickinstall github actions"
readme = "README.md"
# This is what ubuntu-latest has installed by default
requires-python = ">=3.8"
dependencies = [
    "influxdb3-python>=0.8.0",
    "requests>=2.32.3",
    "semver>=3.0.2",
    "polars>=1.6.0",
]
