[package]
name = "cargo-quickinstall-stats-server"
version = "0.0.0"
authors = ["David Laban <alsuren@gmail.com>"]
# based on https://github.com/fly-apps/hello-rust by Jerome Gravel-Niquet <jeromegn@gmail.com>
edition = "2021"

# Make a new workspace so that we get our own Cargo.lock and target dir for the docker build. 
[workspace]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
influxrs = "2.0.1"

[profile.release]
lto = "thin"
