[package]
name = "cargo-quickinstall-stats-server"
version = "0.0.0"
authors = ["David Laban <alsuren@gmail.com>"]
# based on https://github.com/fly-apps/hello-rust by Jerome Gravel-Niquet <jeromegn@gmail.com>
edition = "2021"

# Make a new workspace so that we get our own Cargo.lock and target dir for the docker build. 
[workspace]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.10"
influxdb = "0.6.0"
chrono = "0.4.23"
